--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'kotlin-parcelize'
 apply from: "$rootDir/githooks.gradle"
 
 android {
@@ -23,27 +24,54 @@ android {
 
     buildFeatures {
         viewBinding true
+        compose true
     }
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_17
         targetCompatibility = JavaVersion.VERSION_17
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = '1.5.14'
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 }
 
 dependencies {
-    implementation 'androidx.cardview:cardview:1.0.0'
     def retrofit_version = '2.11.0'
+    def compose_bom_version = '2024.06.00'
+    def lifecycle_version = '2.8.4'
+    def navigation_version = '2.7.7'
 
     // Core
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     // Support
     implementation 'androidx.annotation:annotation:1.8.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation "androidx.activity:activity-ktx:1.9.1"
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "androidx.activity:activity-compose:1.9.1"
+    implementation 'androidx.core:core-ktx:1.13.1'
+
+    // Compose BOM
+    implementation platform("androidx.compose:compose-bom:$compose_bom_version")
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material:material-icons-extended'
+    implementation 'androidx.compose.foundation:foundation'
+    implementation 'androidx.compose.runtime:runtime-livedata'
+
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:$navigation_version"
 
     // Architecture
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
@@ -53,8 +81,7 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 
     // Misc
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'jp.wasabeef:picasso-transformations:2.4.0'
+    implementation 'io.coil-kt:coil-compose:2.7.0'
     implementation 'com.google.code.gson:gson:2.11.0'
 
     // Dagger Hilt
@@ -69,4 +96,10 @@ dependencies {
     testImplementation 'com.squareup.assertj:assertj-android:1.2.0'
     testImplementation 'androidx.annotation:annotation:1.8.1'
     testImplementation "androidx.arch.core:core-testing:2.2.0"
+
+    // Compose Testing
+    androidTestImplementation platform("androidx.compose:compose-bom:$compose_bom_version")
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
