--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
 
         <activity
             android:name=".main.MainActivity"
+            android:theme="@style/Theme.Premier"
             android:exported="true"
             >
             <intent-filter>
@@ -25,11 +26,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".detail.FilmDetailActivity"
-            android:label="@string/top_movies"
-            />
 
     </application>
 
